--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@portabletext/react": "^3.0.18",
-    "@react-three/drei": "^9.0.1",
+    "@react-three/drei": "^9.115.0",
     "@react-three/fiber": "^8.16.5",
     "@sanity/client": "^6.18.0",
     "@sanity/image-url": "^1.0.2",
@@ -30,7 +30,8 @@
     "react-intersection-observer": "^9.10.2",
     "sanity": "^3.41.1",
     "styled-components": "^6.1.11",
-    "three": "^0.158.0"
+    "three": "^0.170.0",
+    "three-mesh-bvh": "^0.8.2"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.2.3",
